--- a/sky_scraper/android/app/build.gradle
+++ b/sky_scraper/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.sky_scraper"
+        applicationId "com.scraper.sky_scraper"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
