--- a/sky_scraper/pubspec.yaml
+++ b/sky_scraper/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.0"
 
+flutter_icons:
+  image_path: "icon/thumbnail.png"
+  android: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
